[gd_scene load_steps=46 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Player/PlayerCharge1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Player/PlayerCharge2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player/PlayerRise.png" type="Texture" id=4]
[ext_resource path="res://Assets/Player/PlayerIdle1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player/PlayerIdle2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player/PlayerIdle3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player/PlayerIdle4.png" type="Texture" id=8]
[ext_resource path="res://Assets/Player/PlayerLand1.png" type="Texture" id=9]
[ext_resource path="res://Assets/Player/PlayerLand2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Player/PlayerLand3.png" type="Texture" id=11]
[ext_resource path="res://Assets/Player/PlayerRelease2.png" type="Texture" id=12]
[ext_resource path="res://Assets/Player/PlayerRelease3.png" type="Texture" id=13]
[ext_resource path="res://Assets/Player/PlayerHitFront3.png" type="Texture" id=14]
[ext_resource path="res://Assets/Player/PlayerHitFront4.png" type="Texture" id=15]
[ext_resource path="res://Assets/Player/PlayerHitFront5.png" type="Texture" id=16]
[ext_resource path="res://Assets/Player/PlayerHitFront6.png" type="Texture" id=17]
[ext_resource path="res://Assets/Player/PlayerHitFront7.png" type="Texture" id=18]
[ext_resource path="res://Assets/Player/PlayerHitFront8.png" type="Texture" id=19]
[ext_resource path="res://Assets/Player/PlayerHitFront9.png" type="Texture" id=20]
[ext_resource path="res://Assets/Player/PlayerHitFront1.png" type="Texture" id=21]
[ext_resource path="res://Assets/Player/PlayerHitFront2.png" type="Texture" id=22]
[ext_resource path="res://Assets/Player/PlayerHitBack3.png" type="Texture" id=23]
[ext_resource path="res://Assets/Player/PlayerHitBack4.png" type="Texture" id=24]
[ext_resource path="res://Assets/Player/PlayerHitBack5.png" type="Texture" id=25]
[ext_resource path="res://Assets/Player/PlayerHitBack6.png" type="Texture" id=26]
[ext_resource path="res://Assets/Player/PlayerHitBack7.png" type="Texture" id=27]
[ext_resource path="res://Assets/Player/PlayerHitBack8.png" type="Texture" id=28]
[ext_resource path="res://Assets/Player/PlayerHitBack9.png" type="Texture" id=29]
[ext_resource path="res://Assets/Player/PlayerHitBack1.png" type="Texture" id=30]
[ext_resource path="res://Assets/Player/PlayerHitBack2.png" type="Texture" id=31]
[ext_resource path="res://Assets/Player/PlayerHitUp3.png" type="Texture" id=32]
[ext_resource path="res://Assets/Player/PlayerHitUp4.png" type="Texture" id=33]
[ext_resource path="res://Assets/Player/PlayerHitUp5.png" type="Texture" id=34]
[ext_resource path="res://Assets/Player/PlayerHitUp6.png" type="Texture" id=35]
[ext_resource path="res://Assets/Player/PlayerHitUp7.png" type="Texture" id=36]
[ext_resource path="res://Assets/Player/PlayerHitUp8.png" type="Texture" id=37]
[ext_resource path="res://Assets/Player/PlayerHitUp9.png" type="Texture" id=38]
[ext_resource path="res://Assets/Player/PlayerHitUp1.png" type="Texture" id=39]
[ext_resource path="res://Assets/Player/PlayerHitUp2.png" type="Texture" id=40]
[ext_resource path="res://Assets/Player/PlayerAlmostLand.png" type="Texture" id=41]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": false,
"name": "Charge",
"speed": 7.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Rise",
"speed": 60.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": false,
"name": "Land",
"speed": 14.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "Release",
"speed": 10.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": false,
"name": "HitFront",
"speed": 15.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ) ],
"loop": false,
"name": "WindupFront",
"speed": 7.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": false,
"name": "HitBack",
"speed": 15.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 31 ) ],
"loop": false,
"name": "WindupBack",
"speed": 7.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ) ],
"loop": false,
"name": "HitUp",
"speed": 15.0
}, {
"frames": [ ExtResource( 39 ), ExtResource( 40 ) ],
"loop": false,
"name": "WindupUp",
"speed": 7.0
}, {
"frames": [ ExtResource( 41 ) ],
"loop": true,
"name": "AlmostLand",
"speed": 60.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 7 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 10, 0, 5, 0.5, -5, 0.5, -10, 0, -8.66, -5, -5, -8.66, 0, -10, 5, -8.66, 8.66, -5 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 10, 0, 5, 3, -5, 3, -10, 0, -8.66, -5, -5, -8.66, 0, -10, 5, -8.66, 8.66, -5 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
use_parent_material = true
frames = SubResource( 1 )
animation = "Idle"
playing = true

[node name="BlinkRect" type="ColorRect" parent="."]
margin_left = -1.0
margin_top = -5.0
margin_right = 2.0
margin_bottom = -1.0
color = Color( 0, 0, 0, 1 )

[node name="BlinkTimer" type="Timer" parent="BlinkRect"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
visible = false
shape = SubResource( 3 )

[node name="WindupArea" type="Area2D" parent="HitArea"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea/WindupArea"]
visible = false
scale = Vector2( 3, 3 )
shape = SubResource( 4 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="BlinkRect/BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
[connection signal="body_exited" from="HitArea" to="." method="_on_HitArea_body_exited"]
[connection signal="body_entered" from="HitArea/WindupArea" to="." method="_on_WindupArea_body_entered"]
[connection signal="body_exited" from="HitArea/WindupArea" to="." method="_on_WindupArea_body_exited"]
